# disk_stresser

./: .gitignore  Cargo.toml  README.md
src/: main.rs
