[package]
name = "disk_stresser"
version = "1.0.0-DEV"
edition = "2021"
description = "A multithreaded disk write program"
authors = ["Flaxeneel2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"] }